--- a/core/templates/core/faq_confirm_delete.html
+++ b/core/templates/core/faq_confirm_delete.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}
+{% load static %}
+{% block extra_css %}
+  <link rel="stylesheet" href="{% static 'core/css/faq.css' %}">
+{% endblock %}
+
 {% block content %}
 <div class="container mt-5">
   <div class="row justify-content-center">
