--- a/core/templates/core/faq_form.html
+++ b/core/templates/core/faq_form.html
@@ -1,4 +1,10 @@
 {% extends "base.html" %}
+
+{% load static %}
+{% block extra_css %}
+  <link rel="stylesheet" href="{% static 'core/css/faq.css' %}">
+{% endblock %}
+
 {% block content %}
   <div class="container mt-4">
     <h2>
