--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -1,6 +1,14 @@
 {# /templates/account/logout.html #}
 {% extends "profiles/login.html" %}
 
+{% load static %}
+
+{% block extra_css %}
+  <link rel="stylesheet" href="{% static 'css/base.css' %}">
+{% endblock %}
+
+
+
 {% block content %}
 <div class="container mt-5">
   <div class="row justify-content-center">
@@ -10,7 +18,7 @@
           <h4>Sign Out</h4>
         </div>
         <div class="card-body">
-          <p class="mb-4">Are you sure you want to sign out?</p>
+          <p class="logout-confirm mb-4 text-center">Are you sure you want to sign out?</p>
           <form method="post" action="{% url 'account_logout' %}">
             {% csrf_token %}
             <button type="submit" class="btn btn-danger w-100">Yes, sign me out</button>
