--- a/products/templates/products/hurleys_shop.html
+++ b/products/templates/products/hurleys_shop.html
@@ -11,16 +11,18 @@ Hurleys, Camogie Hurleys, hurley makers, GAA Gear, Best hurleys, bambu hurleys, 
 
     <!-- Display Hurleys  -->
     <div class="row text-center mt-4">
-        {% for hurley in hurleys %}
-        <div class="col-md-4 mb-4">
-            <a href="{% url 'hurley_detail' hurley.product.id %}">
-                <img src="{% if hurley.product.image %}{{ hurley.product.image.url }}{% else %}{% static 'images/default-product.jpg' %}{% endif %}" alt="{{ hurley.product.name }}" class="img-fluid rounded">
-                <h3 class="mt-3">{{ hurley.product.name }}</h3>
-            </a>
-        </div>
-        {% empty %}
-        <p class="text-center">No hurleys found for this category.</p>
-        {% endfor %}
+{% for hurley in hurleys %}
+  <div class="col-md-4 mb-4">
+    <a href="{% url 'hurley_detail' hurley.product.id %}">
+      <img
+        src="{% static 'products/hurley-{{ hurley.type }}.webp' %}"
+        alt="{{ hurley.product.name }}"
+        class="img-fluid rounded"
+      >
+      <h3 class="mt-3">{{ hurley.product.name }}</h3>
+    </a>
+  </div>
+{% endfor %}
     </div>
 </div>
 {% endblock %}
