--- a/templates/base.html
+++ b/templates/base.html
@@ -89,9 +89,7 @@
                     aria-label="Visit our Facebook page">
                     Facebook
                   </a>
-                  <a href="/privacy-policy/" 
-                    class="text-white mx-2" 
-                    aria-label="Read our Privacy Policy">
+                  <a href="{% url 'privacy_policy' %}" class="text-white mx-2">
                     Privacy Policy
                   </a>
                   <a href="{% url 'contact_us' %}" 
