--- a/products/templates/products/hurleys_shop.html
+++ b/products/templates/products/hurleys_shop.html
@@ -9,20 +9,25 @@ Hurleys, Camogie Hurleys, hurley makers, GAA Gear, Best hurleys, bambu hurleys, 
 <div class="container mt-5">
     <h1 class="text-center">Hurleys Shop</h1>
 
-    <!-- Display Hurleys  -->
-    <div class="row text-center mt-4">
-{% for hurley in hurleys %}
-  <div class="col-md-4 mb-4">
-    <a href="{% url 'hurley_detail' hurley.product.id %}">
-      <img
-        src="{% static 'products/hurley-{{ hurley.type }}.webp' %}"
-        alt="{{ hurley.product.name }}"
-        class="img-fluid rounded"
-      >
-      <h3 class="mt-3">{{ hurley.product.name }}</h3>
-    </a>
-  </div>
-{% endfor %}
+    <!-- Display Hurleys  --><div class="row text-center mt-4">
+  {% for hurley in hurleys %}
+    {# decide which file name to use #}
+    {% if hurley.type == 'ash' %}
+      {% static 'products/ash_hurley.webp' as image_url %}
+    {% elif hurley.type == 'bambu' %}
+      {% static 'products/bambu_hurley.webp' as image_url %}
+    {% else %}
+      {% static 'products/goalie_hurley.webp' as image_url %}
+    {% endif %}
+
+    <div class="col-md-4 mb-4">
+      <a href="{% url 'hurley_detail' hurley.product.id %}">
+        <img src="{{ image_url }}"
+             alt="{{ hurley.product.name }}"
+             class="img-fluid rounded">
+        <h3 class="mt-3">{{ hurley.product.name }}</h3>
+      </a>
     </div>
+  {% endfor %}
 </div>
 {% endblock %}
