--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -1,106 +1,142 @@
 {% extends 'base.html' %}
 {% load static %}
 
-
 {% block content %}
 <div class="container mt-5">
-    <h1 class="text-center">{{ product.name }}</h1>
-    <div class="row">
-        <div class="col-md-6">
-            <img src="{{ product.image.url }}" alt="{{ product.name }}" class="img-fluid">
-            <p id="manufacturer-description" class="mt-3">
-                {% if product.hurley %}
-                    Manufacturer: {{ product.hurley.manufacturer.name }}
-                {% endif %}
-            </p>
-        </div>
-        <div class="col-md-6">
-            <p><strong>Price:</strong> €{{ product.price }}</p>
-            <p><strong>Description:</strong> {{ product.description }}</p>
-            <form method="POST" action="{% url 'add_to_bag' product.id %}">
-                {% csrf_token %}
-                {% if product.hurley %}
-                    <div class="form-group">
-                        <label for="size">Size:</label>
-                        <select id="size" name="size" class="form-control">
-                            {% for size, size_label in size_choices %}
-                                <option value="{{ size }}">{{ size_label }}</option>
-                            {% endfor %}
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="weight">Weight:</label>
-                        <select id="weight" name="weight" class="form-control">
-                            {% for weight, weight_label in weight_choices %}
-                                <option value="{{ weight }}">{{ weight_label }}</option>
-                            {% endfor %}
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="grip_color">Grip Color:</label>
-                        <select id="grip_color" name="grip_color" class="form-control">
-                            {% for color, color_label in grip_color_choices %}
-                                <option value="{{ color }}">{{ color_label }}</option>
-                            {% endfor %}
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="manufacturer">Manufacturer:</label>
-                        <select id="manufacturer" name="manufacturer" class="form-control">
-                            {% for manufacturer in manufacturers %}
-                                                <option value="{{ manufacturer.id }}">{{ manufacturer.name }}</option>
-                            {% endfor %}
-                        </select>
-                    </div>
-                {% endif %}
-                {% if product.helmet %}
-                    <div class="form-group">
-                        <label for="size">Size:</label>
-                        <select id="size" name="size" class="form-control">
-                            {% for size, size_label in size_choices %}
-                                <option value="{{ size }}">{{ size_label }}</option>
-                            {% endfor %}
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="color">Color:</label>
-                        <select id="color" name="color" class="form-control">
-                            {% for color, color_label in color_choices %}
-                                <option value="{{ color }}" data-image-url="{% static 'images/helmets/' %}{{ color }}_helmet.png">
-                                    {{ color_label }}
-                                </option>
-                            {% endfor %}
-                        </select>
-                    </div>
-                {% endif %}
-                {% if product.grip %}
-                    <div class="form-group">
-                        <label for="color">Color:</label>
-                        <select id="color" name="color" class="form-control">
-                            {% for color, color_label in color_choices %}
-                                <option value="{{ color }}">{{ color_label }}</option>
-                            {% endfor %}
-                        </select>
-                    </div>
-                {% endif %}
-                {% if product.sliotar %}
-                    <div class="form-group">
-                        <label for="color">Color:</label>
-                        <select id="color" name="color" class="form-control">
-                            {% for color, color_label in color_choices %}
-                                <option value="{{ color }}">{{ color_label }}</option>
-                            {% endfor %}
-                        </select>
-                    </div>
-                {% endif %}
-                <div class="form-group">
-                    <label for="quantity">Quantity:</label>
-                    <input type="number" id="quantity" name="quantity" value="1" min="1" class="form-control mb-3">
-                </div>
-                <button type="submit" class="btn btn-primary">Add to Bag</button>
-            </form>
-        </div>
+  <h1 class="text-center">{{ product.name }}</h1>
+  <div class="row">
+    <div class="col-md-6">
+      {# pick a static hero image based on type, falling back to uploaded media or default #}
+      {% if product.hurley %}
+        {% static "products/"|add:product.hurley.type|add:"-hurley.webp" as image_url %}
+      {% elif product.helmet %}
+        {% static "products/"|add:product.helmet.color|add:"-cooper-helmet.webp" as image_url %}
+      {% elif product.grip %}
+        {% static "products/grips.webp" as image_url %}
+      {% elif product.sliotar %}
+        {% static "products/12-sliotars.webp" as image_url %}
+      {% elif product.image %}
+        {# if you really have an uploaded media fallback #}
+        {% with product.image.url as image_url %}{% endwith %}
+      {% else %}
+        {% static "images/default-product.png" as image_url %}
+      {% endif %}
+
+      <img src="{{ image_url }}"
+           alt="{{ product.name }}"
+           class="img-fluid rounded">
+
+      <p id="manufacturer-description" class="mt-3">
+        {% if product.hurley %}
+          Manufacturer: {{ product.hurley.manufacturer.name }}
+        {% endif %}
+      </p>
     </div>
+
+    <div class="col-md-6">
+      <p><strong>Price:</strong> €{{ product.price }}</p>
+      <p><strong>Description:</strong> {{ product.description }}</p>
+      <form method="POST" action="{% url 'add_to_bag' product.id %}">
+        {% csrf_token %}
+
+        {% if product.hurley %}
+          {# size, weight, grip_color, manufacturer selects … #}
+          <div class="form-group">
+            <label for="size">Size:</label>
+            <select id="size" name="size" class="form-control">
+              {% for size, size_label in size_choices %}
+                <option value="{{ size }}">{{ size_label }}</option>
+              {% endfor %}
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="weight">Weight:</label>
+            <select id="weight" name="weight" class="form-control">
+              {% for weight, weight_label in weight_choices %}
+                <option value="{{ weight }}">{{ weight_label }}</option>
+              {% endfor %}
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="grip_color">Grip Color:</label>
+            <select id="grip_color" name="grip_color" class="form-control">
+              {% for color, color_label in grip_color_choices %}
+                <option value="{{ color }}">{{ color_label }}</option>
+              {% endfor %}
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="manufacturer">Manufacturer:</label>
+            <select id="manufacturer" name="manufacturer" class="form-control">
+              {% for manufacturer in manufacturers %}
+                <option value="{{ manufacturer.id }}">{{ manufacturer.name }}</option>
+              {% endfor %}
+            </select>
+          </div>
+        {% endif %}
+
+        {% if product.helmet %}
+          {# helmet size + color … #}
+          <div class="form-group">
+            <label for="size">Size:</label>
+            <select id="size" name="size" class="form-control">
+              {% for size, size_label in size_choices %}
+                <option value="{{ size }}">{{ size_label }}</option>
+              {% endfor %}
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="color">Color:</label>
+            <select id="color" name="color" class="form-control">
+              {% for color, color_label in color_choices %}
+                {# point at your static helmet images #}
+                {% static 'products/'|add:color|add:'-cooper-helmet.webp' as helmet_img %}
+                <option value="{{ color }}" data-image-url="{{ helmet_img }}">
+                  {{ color_label }}
+                </option>
+              {% endfor %}
+            </select>
+          </div>
+        {% endif %}
+
+        {% if product.grip %}
+          <div class="form-group">
+            <label for="color">Color:</label>
+            <select id="color" name="color" class="form-control">
+              {% for color, color_label in color_choices %}
+                <option value="{{ color }}">{{ color_label }}</option>
+              {% endfor %}
+            </select>
+          </div>
+        {% endif %}
+
+        {% if product.sliotar %}
+          <div class="form-group">
+            <label for="color">Color:</label>
+            <select id="color" name="color" class="form-control">
+              {% for color, color_label in color_choices %}
+                <option value="{{ color }}">{{ color_label }}</option>
+              {% endfor %}
+            </select>
+          </div>
+        {% endif %}
+
+        <div class="form-group">
+          <label for="quantity">Quantity:</label>
+          <input
+            type="number"
+            id="quantity"
+            name="quantity"
+            value="1"
+            min="1"
+            class="form-control mb-3">
+        </div>
+        <button type="submit" class="btn btn-primary">
+          Add to Bag
+        </button>
+      </form>
+    </div>
+  </div>
 </div>
 
 <script>
