--- a/products/templates/products/hurleys_shop.html
+++ b/products/templates/products/hurleys_shop.html
@@ -21,13 +21,12 @@ Hurleys, Camogie Hurleys, hurley makers, GAA Gear, Best hurleys, bambu hurleys, 
 
     <div class="col-md-4 mb-4">
       <a href="{% url 'hurley_detail' hurley.product.id %}">
-        <img src="{{ static filename }}"
+        <img src="{{ image_url }}"
              alt="{{ hurley.product.name }}"
              class="img-fluid rounded">
         <h3 class="mt-3">{{ hurley.product.name }}</h3>
       </a>
     </div>
-    {% endwith %}
   {% endfor %}
 </div>
 </div>
