--- a/products/templates/products/accessories_shop.html
+++ b/products/templates/products/accessories_shop.html
@@ -10,7 +10,11 @@
     {% static "products/12-sliotars.webp" as sliotar_img %}
     <div class="col-md-4 mb-4">
       <a href="{% url 'sliotar_detail' sliotars.0.product.id %}">
-        <img src="{{ sliotar_img }}" alt="Sliotar" class="img-fluid rounded">
+        <img
+          src="{{ sliotar_img }}"
+          alt="{{ sliotars.0.product.name }}"
+          class="img-fluid rounded"
+        >
         <h3 class="mt-3">{{ sliotars.0.product.name }}</h3>
       </a>
     </div>
@@ -19,7 +23,11 @@
     {% static "products/blue-cooper-helmet.webp" as helmet_img %}
     <div class="col-md-4 mb-4">
       <a href="{% url 'helmet_detail' helmets.0.product.id %}">
-        <img src="{{ helmet_img }}" alt="{{ helmets.0.product.name }}" class="img-fluid rounded">
+        <img
+          src="{{ helmet_img }}"
+          alt="{{ helmets.0.product.name }}"
+          class="img-fluid rounded"
+        >
         <h3 class="mt-3">{{ helmets.0.product.name }}</h3>
       </a>
     </div>
@@ -28,7 +36,11 @@
     {% static "products/grips.webp" as grip_img %}
     <div class="col-md-4 mb-4">
       <a href="{% url 'grip_detail' grips.0.product.id %}">
-        <img src="{{ grip_img }}" alt="{{ grips.0.product.name }}" class="img-fluid rounded">
+        <img
+          src="{{ grip_img }}"
+          alt="{{ grips.0.product.name }}"
+          class="img-fluid rounded"
+        >
         <h3 class="mt-3">{{ grips.0.product.name }}</h3>
       </a>
     </div>
