--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -5,6 +5,7 @@
 <h1>Products</h1>
 <div class="row">
   {% for product in products %}
+
     {# choose a static thumbnail #}
     {% if product.hurley %}
       {% static "products/"|add:product.hurley.type|add:"-hurley.webp" as thumb_url %}
@@ -20,28 +21,32 @@
 
     <div class="col-md-4 mb-4">
       <div class="card">
-        <img src="{{ thumb_url }}"
-             class="card-img-top"
-             alt="{{ product.name }}">
+        <img
+          src="{{ thumb_url }}"
+          class="card-img-top"
+          alt="{{ product.name }}"
+        >
         <div class="card-body">
           <h5 class="card-title">{{ product.name }}</h5>
           <p class="card-text">Price: €{{ product.price }}</p>
-          <a href="
-            {% if product.hurley %}
-              {% url 'hurley_detail' product.hurley.product.id %}
-            {% elif product.helmet %}
-              {% url 'helmet_detail' product.helmet.product.id %}
-            {% elif product.grip %}
-              {% url 'grip_detail' product.grip.product.id %}
-            {% elif product.sliotar %}
-              {% url 'sliotar_detail' product.sliotar.product.id %}
-            {% endif %}"
-            class="btn btn-primary">
+          <a
+            href="{% if product.hurley %}
+                     {% url 'hurley_detail' product.hurley.product.id %}
+                   {% elif product.helmet %}
+                     {% url 'helmet_detail' product.helmet.product.id %}
+                   {% elif product.grip %}
+                     {% url 'grip_detail' product.grip.product.id %}
+                   {% elif product.sliotar %}
+                     {% url 'sliotar_detail' product.sliotar.product.id %}
+                   {% endif %}"
+            class="btn btn-primary"
+          >
             View Details
           </a>
         </div>
       </div>
     </div>
+
   {% endfor %}
 </div>
 {% endblock %}
