Remove s from goalie-hurley.webp

--- a/products/templates/products/hurleys_shop.html
+++ b/products/templates/products/hurleys_shop.html
@@ -11,7 +11,7 @@
       {% elif hurley.type == "bambu" %}
         {% static "products/bambu-hurley.webp" as image_url %}
       {% else %}
-        {% static "products/goalie-hurleys.webp" as image_url %}
+        {% static "products/goalie-hurley.webp" as image_url %}
       {% endif %}
 
       <div class="col-md-4 mb-4">
