Add some debug messages to hurley_shop

--- a/products/templates/products/hurleys_shop.html
+++ b/products/templates/products/hurleys_shop.html
@@ -2,6 +2,8 @@
 {% load static %}
 
 {% block content %}
+<p>👀 hurleys count = {{ hurleys|length }}</p>
+
 <div class="container mt-5">
   <h1 class="text-center">Hurleys Shop</h1>
   <div class="row text-center mt-4">
