Fix contact us link on How to measure page

--- a/home/templates/home/how_to_measure.html
+++ b/home/templates/home/how_to_measure.html
@@ -79,7 +79,7 @@
         <li> Ensure the measuring tape is flat the full way around, it should sit snug but not too tight.</li>
         <li> Take note of the measurements and find the correct size of hurling helmet using the size guide.</li>
         <br>
-        If you have any questions, feel free to <a href="/contact-us/">Contact Us
+        If you have any questions, feel free to <a href="{% url 'contact_us' %}" aria-label="Contact us for inquiries">Contact Us</a>
 
     </ol>
     </p>
