Add products: infront of products_list, hurleys_shop, bag and fix urls of products to show hurleys and accessories when selected on nav bar. Update styling in checkout naviagtion options.

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -65,7 +65,7 @@
         {% else %}
         <p class="lead text-center">Your bag is empty.</p>
         <div class="text-center">
-            <a href="{% url 'product_list' %}" class="btn btn-outline-primary btn-lg">
+            <a href="{% url 'products:product_list' %}" class="btn btn-outline-primary btn-lg">
                 <i class="fas fa-chevron-left"></i> Continue Shopping
             </a>
         </div>
