--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -50,17 +50,15 @@
 
     <!-- Navigation Options -->
     <div class="text-center mt-4">
-        <a href="{% url 'home' %}" class="btn btn-outline-black rounded-0">
-            <span class="icon">
-                <i class="fas fa-home"></i>
-            </span>
-            <span class="font-weight-bold">Return to Homepage</span>
+        <a href="{% url 'home' %}"
+            class="btn-return-home btn btn-lg rounded-0">
+            <i class="fas fa-home"></i>
+            Return to Homepage
         </a>
-        <a href="{% url 'product_list' %}" class="btn btn-black rounded-0">
-            <span class="icon">
-                <i class="fas fa-shopping-bag"></i>
-            </span>
-            <span class="font-weight-bold">Continue Shopping</span>
+        <a href="{% url 'products:product_list' %}"
+            class="btn-continue-shopping btn btn-lg rounded-0">
+            <i class="fas fa-shopping-bag"></i>
+            Continue Shopping
         </a>
     </div>
 </div>
