--- a/products/templates/products/hurleys_shop.html
+++ b/products/templates/products/hurleys_shop.html
@@ -2,7 +2,6 @@
 {% load static %}
 
 {% block content %}
-<p>👀 hurleys count = {{ hurleys|length }}</p>
 
 <div class="container mt-5">
   <h1 class="text-center">Hurleys Shop</h1>
@@ -17,7 +16,7 @@
       {% endif %}
 
       <div class="col-md-4 mb-4">
-        <a href="{% url 'hurley_detail' hurley.product.id %}">
+        <a href="{% url 'products:hurley_detail' hurley.product.id %}">
           <img src="{{ image_url }}"
                alt="{{ hurley.product.name }}"
                class="img-fluid rounded">
