--- a/templates/base.html
+++ b/templates/base.html
@@ -94,7 +94,7 @@
                   </a>
                   <a href="{% url 'contact_us' %}" 
                       class="text-white mx-2" 
-                      aria-label="Contact us for inquiries">
+                      aria-label="Contact us for enquiries">
                       Contact Us
                   </a>
               </div>
