--- a/static/css/base.css
+++ b/static/css/base.css
@@ -193,9 +193,17 @@ body {
 }
 
 .logout-confirm {
-    color: #212529;   /* Bootstrap’s “dark” text color */
+    color: #212529;   
   }
-  
+
+  /* MailChimp */
+  #mc_embed_signup{
+    background:#fff; 
+    clear:left; 
+    font:14px Helvetica,Arial,sans-serif; 
+    width: 600px;
+}
+
 /* Stack input and button for mobile */
 @media (max-width: 600px) {
     .subscribe-form {
