--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -74,8 +74,8 @@
 </div>
 
 <!-- Bag Summary -->
-    <div class="bag-summary-wrapper">
-        <div class="row mt-4 mb-4">
+    <div class="container mt-4 mb-4"> 
+        <div class="row">
             <div class="col-md-6">
                 <form method="POST" action="{% url 'add_gift_message' %}">
                     {% csrf_token %}
