--- a/templates/base.html
+++ b/templates/base.html
@@ -60,85 +60,76 @@
       <div class="wrapper flex-grow-1">
       <main>{% block content %}{% endblock %}</main>
       </div>
+        <footer class="bg-dark text-white py-4">
+          <div class="container">
+            <div class="row align-items-center">
+              <!-- 1) Mailchimp signup in left column -->
+              <div class="col-md-6 mb-3 mb-md-0">
+                <div id="mc_embed_signup">
+                  <form action="https://herokuapp.us18.list-manage.com/subscribe/post?u=9f358bb52fc3efa311e708802&amp;id=23b4851baa"
+                        method="post"
+                        id="mc-embedded-subscribe-form"
+                        name="mc-embedded-subscribe-form"
+                        class="validate d-flex flex-wrap align-items-center"
+                        target="_blank"
+                        novalidate>
+                      <div id="mc_embed_signup_scroll" class="input-group input-group-lg">
+                        <input type="email"
+                              name="EMAIL"
+                              class="required email form-control flex-grow-1 mb-2 mb-sm-0"
+                              id="mce-EMAIL"
+                              placeholder="Enter your email"
+                              required>
+                          <div class="input-group-append">
 
-      <footer class="bg-dark text-white py-3">
-        <div class="row align-items-center">
-          <div class="col-md-6 mb-3 mb-md-0">
-            <div class="row no-gutters">
-              <div class="col-12 col-md-8 mb-2 mb-md-0">
-                  <form class="subscribe-form" action="https://mailchimp.com" method="POST">
-                    <label for="email" class="sr-only">Sign up for updates:</label>
-                    <input
-                        type="email"
-                        id="email"
-                        name="email"
-                        placeholder="Enter your email"
-                        required
-                    />
-                    <button type="submit">Subscribe</button>
+                          <button type="submit"
+                                  name="subscribe"
+                                  id="mc-embedded-subscribe"
+                                  class="button btn btn-primary ml-2">
+                            Subscribe
+                          </button>
+                        </div>
+                      </div>
+                    <!-- honeypot -->
+                    <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                      <input type="text"
+                            name="b_9f358bb52fc3efa311e708802_23b4851baa"
+                            tabindex="-1"
+                            value="">
+                    </div>
                   </form>
+                  <!-- responses -->
+                  <div id="mce-responses" class="clear mt-2 small text-muted">
+                    <div class="response" id="mce-error-response" style="display:none"></div>
+                    <div class="response" id="mce-success-response" style="display:none"></div>
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>    
-            <!-- Links -->
-            <div class="col-md-6 text-md-right">
-              <div class="d-flex justify-content-center justify-content-md-end">
-                  <a href="https://facebook.com" 
-                    class="text-white mx-2" 
-                    target="_blank" 
-                    rel="noopener noreferrer" 
+
+              <!-- 2) Links in right column FB Privacy Policy and Contact Us-->
+              <div class="col-md-6 text-md-right">
+                <div class="d-flex justify-content-center justify-content-md-end">
+                  <a href="https://facebook.com"
+                    class="text-white mx-2"
+                    target="_blank"
+                    rel="noopener noreferrer"
                     aria-label="Visit our Facebook page">
                     Facebook
                   </a>
-                  <a href="{% url 'privacy_policy' %}" class="text-white mx-2">
+                  <a href="{% url 'privacy_policy' %}"
+                    class="text-white mx-2">
                     Privacy Policy
                   </a>
-                  <a href="{% url 'contact_us' %}" 
-                      class="text-white mx-2" 
-                      aria-label="Contact us for enquiries">
-                      Contact Us
+                  <a href="{% url 'contact_us' %}"
+                    class="text-white mx-2"
+                    aria-label="Contact us for enquiries">
+                    Contact Us
                   </a>
+                </div>
               </div>
             </div>
           </div>
-        </div>        <div id="mc_embed_signup">
-  <form action="https://herokuapp.us18.list-manage.com/subscribe/post?u=9f358bb52fc3efa311e708802&amp;id=23b4851baa&amp;f_id=00a9b2e6f0"
-        method="post"
-        id="mc-embedded-subscribe-form"
-        name="mc-embedded-subscribe-form"
-        class="validate"
-        target="_blank">
-    <div id="mc_embed_signup_scroll">
-      <h2>Subscribe</h2>
-      <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-      <div class="mc-field-group">
-        <label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label>
-        <input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required>
-      </div>
-      <div id="mce-responses" class="clear foot">
-        <div class="response" id="mce-error-response" style="display:none"></div>
-        <div class="response" id="mce-success-response" style="display:none"></div>
-      </div>
-      <div aria-hidden="true" style="position: absolute; left: -5000px;">
-        <input type="text" name="b_9f358bb52fc3efa311e708802_23b4851baa" tabindex="-1" value="">
-      </div>
-      <div class="optionalParent">
-        <div class="clear foot">
-          <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe">
-          <p style="margin: 0px auto;">
-            <a href="http://eepurl.com/jgMX6-" title="Mailchimp - email marketing made easy and fun">
-              <span style="display: inline-block; background-color: transparent; border-radius: 4px;">
-                <img class="refferal_badge" src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg" alt="Intuit Mailchimp" style="width: 220px; height: 40px; display: flex; padding: 2px 0px; justify-content: center; align-items: center;">
-              </span>
-            </a>
-          </p>
-        </div>
-      </div>
-    </div>
-  </form>
-</div>
-
-      </footer>
+        </footer>
     </div>
 
   <!-- Include Toast Templates -->
