--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -49,7 +49,7 @@
     </div>
 
     <!-- Navigation Options -->
-    <div class="text-center mt-4">
+    <div class="thank-you-nav mt-5">
         <a href="{% url 'home' %}"
             class="btn-return-home btn btn-lg rounded-0">
             <i class="fas fa-home"></i>
